# typst-count

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  chapter1.typ  chapter2.typ  foreign.typ  math.typ  mixed_math.typ  shared.typ  simple.typ  with_imports.typ
src/: cli.rs  counter.rs  lib.rs  main.rs  world.rs
src/output/: csv.rs  human.rs  json.rs  mod.rs
