[package]
name = "typst-count"
version = "0.1.0"
edition = "2024"
authors = ["Mikkel M.H. Pedersen <mikkel.helding@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Count words and characters in Typst documents"
repository = "https://github.com/HollowNumber/typst-count"
readme = "README.md"
keywords = ["typst", "word-count", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
typst = "0.14"

[[bin]]
name = "typst-count"
path = "src/main.rs"
