[package]
name = "typst-count"
version = "0.1.0"
edition = "2024"
authors = ["Mikkel M.H. Pedersen <mikkel.helding@gmail.com>"]
license = "MIT"
description = "Count words and characters in Typst documents"
repository = "https://github.com/HollowNumber/typst-count"
readme = "README.md"
keywords = ["typst", "word-count", "cli"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["embed-fonts"]
embed-fonts = ["typst-kit/embed-fonts"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
typst = "0.14"
typst-kit = { version = "0.14", features = [] }
chrono = "0.4"
ecow = "0.2"
parking_lot = "0.12"
rustc-hash = "2.0"


[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "typst-count"
path = "src/main.rs"
